--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -93,8 +93,8 @@
 
                 <div class="box gap">
                     <div class="date-header">
-                        <span class="font chocolate-brown superbold small">Hoje - 01/04</span>
-                        <a href=""><img class="icon-color" src="/img/eye-icon.png" class="hover"></a>
+                        <span class="font chocolate-brown superbold small">Hoje - <%= today %></span>
+                        <a href="/<%= this_user.username %>/day/<%= link_today %>"><img class="icon-color" src="/img/eye-icon.png" class="hover"></a>
                     </div>
                     <div class="sec">
                         <div class="meal font small white bold width-100 smallerhover">Café da manhã</div>
