--- a/src/views/day.ejs
+++ b/src/views/day.ejs
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/header_style.css">
     <link rel="stylesheet" type="text/css" href="/css/recipe_style.css">
-    <title>DIa</title>
+    <title><%= formatted_date %></title>
 </head>
 
 <body>
