--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="/css/header_style.css">
     <link rel="stylesheet" type="text/css" href="/css/recipe_style.css">
     <script defer src="/js/script.js"></script>
-    <title>Home</title>
+    <title>Página inícial</title>
 </head>
 
 <body>
@@ -85,10 +85,10 @@
                         <img class="icon-color " src="/img/calendar-icon.png" alt="">
                         <span class="font chocolate-brown small bold ">Calendário</span>
                     </a>
-                    <a class="flex-column center hover decoration-text">
+                    <!-- <a class="flex-column center hover decoration-text">
                         <img class="icon-color" src="/img/users-icon.png" alt="">
                         <span class="font chocolate-brown small bold" href="">Comunidade</span>
-                    </a>
+                    </a> -->
                 </div>
 
                 <div class="box gap">
@@ -96,7 +96,7 @@
                         <span class="font chocolate-brown superbold small">Hoje - <%= today %></span>
                         <a href="/<%= this_user.username %>/day/<%= link_today %>"><img class="icon-color" src="/img/eye-icon.png" class="hover"></a>
                     </div>
-                    <div class="sec">
+                    <!-- <div class="sec">
                         <div class="meal font small white bold width-100 smallerhover">Café da manhã</div>
                         <div class="recipes-link">
                             <a href="" class="font small chocolate-brown bold width-100">Pão de queijo</a>
@@ -107,7 +107,7 @@
                         <div class="recipes-link">
                             <a href="" class="font small chocolate-brown bold">Pão de queijo</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </aside>
             <article>
