--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,7 +28,8 @@
         <nav class="header navbar navbar-expand-lg">
             <div class="container-fluid padding-zero">
                 <div class="menu">
-                    <a class="padding-zero margin-zero" href="/"><img src="img/logo-white-green.png" class="logo-icon hover"></a>
+                    <a class="padding-zero margin-zero hover" href="/"><img src="/img/logo-white-green.png"
+                            class="logo-icon"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -39,15 +40,10 @@
                     <div class="collapse navbar-collapse center" id="navbarContent">
                         <ul class="flex-row gap-20 padding-zero margin-zero">
                             <li class="center">
-                                <a class="hover font chocolate-brown superbold no-decoration"
-                                    href="/login"><span>Entrar</span></a>
+                                <a class="font chocolate-brown superbold no-decoration hover" href="/"><span>Sair</span></a>
                             </li>
                             <li class="center">
-                                <a class="hover font chocolate-brown superbold no-decoration"
-                                    href="/signup-1"><span>Cadastrar</span></a>
-                            </li>
-                            <li class="center">
-                                <img class="hover" id="dark_mode_icon" src="img/icon-dark-mode-0.png">
+                                <img class="hover" id="dark_mode_icon" src="/img/icon-dark-mode-0.png">
                             </li>
                         </ul>
                     </div>
@@ -62,13 +58,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+                    <img src="/img/aaa-pizza.jpeg" class="d-block w-100 img-c" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+                    <img src="/img/aaa-tacos.webp" class="d-block w-100 img-c" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/recipes.png" class="d-block w-100" alt="...">
+                    <img src="/img/aaa-macarrao.jpg" class="d-block w-100 img-c" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -81,22 +77,6 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-        </div>
-        <a href="/login">LOGIN</a>
-        <a href="/signup-1">SIGNUP 1</a>
-        <a href="/signup-2">SIGNUP 2</a>
-        <a href="/signup-3">SIGNUP 3</a>
-        <a href="/view-recipes">VIEW RECIPES</a>
-        <a href="/edit-recipes">EDIT RECIPES</a>
-        <a href="/edit-recipe-type">EDIT RECIPE TYPE</a>
-        <a href="/edit-meal">EDIT MEAL</a>
-        <a href="/day">DAY</a>
-        <a href="/edit-profile">EDIT PROFILE</a>
-        <a href="/comunity">COMUNITY</a>
-        <a href="/add-recipe">ADD RECIPE</a>
-        <div>
-
-        </div>
     </main>
     <script src="/js/dark_mode.js" defer></script>
 </body>
