--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="/css/profile_style.css">
     <link rel="stylesheet" type="text/css" href="/css/header_style.css">
 
-    <title>Perfil</title>
+    <title><%= this_user.name %></title>
 </head>
 
 <body>
