--- a/src/views/view_recipes.ejs
+++ b/src/views/view_recipes.ejs
@@ -132,12 +132,12 @@
                                 <span class="font green"><%= this_recipe.portions %> porções</span>
                             </div>
                         </div>
-                        <div>
+                        <!-- <div>
                             <span class="small-box box-green white">Salgado</span>
                             <span class="small-box box-yellow white">Quente</span>
                             <span class="small-box box-brown white">Janta</span>
                             <span class="small-box box-macchiato white">Almoço</span>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="justify font chocolate-brown" style="word-wrap: break-word;">
                         <%= this_recipe.description %>
